# txodds-agent-desk-scaffold

./: .env.example  .gitignore  Justfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
branding/: README.md
coral-agents/match-intelligence-agent/: Dockerfile  README.md  agent.py  coral-agent.toml
coral-agents/seller-fan-card/: coral-agent.toml
coral-agents/seller-risk-policy/: coral-agent.toml
coral-agents/seller-worldcup-edge/: README.md  coral-agent.toml
coral-agents/settlement-arbiter-agent/: README.md  coral-agent.toml
coral-agents/verifier-agent/: coral-agent.toml
coral-agents/worldcup-buyer-agent/: README.md
docs/: README.md  full-tauri-app-plan.md  judging-map.md
docs/adr/: 0006-lean-agent-runtime-no-agent-theatre.md
docs/architecture/: 01-lean-e2e-architecture.md  README.md  compartments.md  full-tauri-app-plan.md  match-intelligence-agent-e2e-rust.md  rust-agents-plan.md
docs/integrations/: README.md  (+4 more)
runtime/: README.md
scripts/: prepare-sidecars.mjs
src/: App.tsx  README.md  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/icons/android/: README.md
src-tauri/icons/ios/: README.md
src-tauri/src/: README.md  chain.rs  config.rs  error.rs  event_bus.rs  ingest.rs  ledger.rs  lib.rs  main.rs  market.rs  settle.rs  state.rs  types.rs  web.rs  yellowstone.rs
src-tauri/src/commands/: chain.rs  config.rs  coral.rs  exports.rs  intelligence.rs  mod.rs  settlement.rs  txline.rs
src-tauri/src/coral/: README.md  agents.rs  market.rs  mod.rs  settlement.rs
src-tauri/src/domain/: agent.rs  markets.rs  mod.rs  proof.rs  rooms.rs
src-tauri/src/ledger/: README.md  mod.rs  store.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/agent/: context.rs  evaluation.rs  features.rs  mod.rs  policy.rs  runtime.rs  tools.rs
src-tauri/src/services/chain/: README.md  mod.rs  rpc.rs  yellowstone.rs
src-tauri/src/services/coral/: README.md  agents.rs  market.rs  mod.rs  settlement.rs
src-tauri/src/services/coralos/: console.rs  mod.rs  protocol.rs  transcript.rs
src-tauri/src/services/ledger/: README.md  store.rs
src-tauri/src/services/llm/: mod.rs  schemas.rs  venice.rs
src-tauri/src/services/proof/: mod.rs  validation.rs
src-tauri/src/services/solana_pay/: README.md  mod.rs
src-tauri/src/services/txline/: README.md  api.rs  ingest.rs  mod.rs
src-tauri/src/triton/: README.md  mod.rs  yellowstone.rs
src-tauri/src/txline/: README.md  ingest.rs  mod.rs
tooling/: README.md  prepare-sidecars.mjs  txline-onboard.mjs
(+83 files in other folders)
