[package]
name = "txodds-agent-desk"
version = "0.1.0"
edition = "2021"

[lib]
name = "txodds_agent_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.8"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
keyring = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
