[package]
# Tauri backend crate for the desktop app.
name = "txodds-agent-desk"
version = "0.1.0"
edition = "2021"

[lib]
# Tauri builds the Rust core as several crate types for desktop/mobile targets.
name = "txodds_agent_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Generates Tauri context and platform resources at build time.
tauri-build = { version = "2", features = [] }

[dependencies]
# Desktop runtime and native plugins.
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# Serialization and typed IPC/event payloads.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Backend-owned HTTP clients for Triton, TxLINE, and sidecar-adjacent calls.
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
# Async runtime used by Tauri tasks, sidecar supervision, SSE, and filesystem IO.
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
# Hash/reference helpers.
sha2 = "0.10"
hex = "0.4"
# Optional loopback diagnostics service.
axum = "0.8"
# Encoding/time/config/streaming support.
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
# OS keychain support for packaged desktop secrets.
keyring = "3"
# Local SQLite ledger; bundled SQLite avoids system dependency drift.
rusqlite = { version = "0.32", features = ["bundled"] }
# Error, stream, and id helpers.
thiserror = "2"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
